Update shapes.css fixed code readability

--- a/shapes.css
+++ b/shapes.css
@@ -6,21 +6,24 @@
       margin: 0 auto;
       float: left;
     }
-.blob-upper-left {width: 200px;
+.blob-upper-left {
+      width: 200px;
       height: 100px;
       background-color: F0D000;
       border-radius: 100px / 50px;
       margin: 0 auto;
       float: left;}
 
-.blob-upper-right {width: 200px;
+.blob-upper-right {
+      width: 200px;
       height: 100px;
       background-color: F0D000;
       border-radius: 100px / 50px;
       margin: 0 auto;
       float: right;}
 
-.blob-lower-left {width: 200px;
+.blob-lower-left {
+      width: 200px;
       height: 100px;
       background-color: F0D000;
       border-radius: 100px / 50px;
